fix z-index of "add_button"

--- a/adverts/static/css/main.scss
+++ b/adverts/static/css/main.scss
@@ -433,7 +433,7 @@ form.new-edit {
   background-color: #e7d9ac;
   margin-top: -160px;
   position: relative;
-  z-index: 1000;
+  z-index: 900;
 
   a {
     text-decoration: underline;
